--- a/Memory/Memory/Memory.csproj
+++ b/Memory/Memory/Memory.csproj
@@ -103,6 +103,9 @@
   <ItemGroup>
     <None Include="Resources\Kartenrücken - Kopie.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\Kartenr_cken_-_Kopie_.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
